--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         
     </div>
     <hr class="bar">
-    <a class="biglink" href="#form-title">kontham.bharathkumar@gmail.com</a>
+    <a class="biglink" href="https://mail.google.com/mail/u/0/#inbox?compose=new">kontham.bharathkumar@gmail.com</a>
 </section>
 
 		<!-- Form section -->
